<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:padding="15dp">

        <FrameLayout
            android:id="@+id/framethree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textVdiew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/checkBox"
                android:layout_gravity="left|center"
                android:text="@string/common_settings"
                android:textColor="@color/colorDarkAccent"
                android:textSize="@dimen/settings_text_size_large" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/framethree"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/checkBoxAudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/checkBox"
                android:layout_gravity="left|center"
                android:text="@string/record_audio"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/settings_text_size" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frametwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/frameOne"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/chesckBoxCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right" />

            <TextView
                android:id="@+id/textsView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/checkBox"
                android:layout_gravity="left|center"
                android:text="@string/pip_camera"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/settings_text_size" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@id/frametwo"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/checkBoxNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right" />

                <TextView
                    android:id="@+id/textViaddaew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/checkBox"
                    android:layout_gravity="left|center"
                    android:text="@string/show_notification"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/settings_text_size" />


            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:id="@+id/checkBoxWaterMark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right" />

                <TextView
                    android:id="@+id/textViaaew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/checkBox"
                    android:layout_gravity="left|center"
                    android:text="@string/enableWatermark"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/settings_text_size" />


            </FrameLayout>

            <EditText
                android:id="@+id/editTextWatermark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|bottom"
                android:visibility="visible" />

            <RadioGroup
                android:id="@+id/colorRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="horizontal"
                android:padding="10dp"

                android:visibility="visible">

                <RadioButton
                    android:id="@+id/radioBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"

                    android:button="@drawable/radio_blue" />

                <RadioButton
                    android:id="@+id/radioRed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"

                    android:button="@drawable/radio_red" />

                <RadioButton
                    android:id="@+id/radioGreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:button="@drawable/radio_green" />

                <RadioButton
                    android:id="@+id/radioOrange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="3"
                    android:button="@drawable/radio_orange" />

                <RadioButton
                    android:id="@+id/radioPink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/radio_pink" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/sizeFixLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_size"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/settings_text_size" />

                <SeekBar
                    android:id="@+id/textSizeSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/previewTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="47dp"
            android:text="@string/preview"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>


</RelativeLayout>